Organizei melhor o código

--- a/index.html
+++ b/index.html
@@ -4,89 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css
-    ">
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #000;
-            color: #fff;
-            margin: 0;
-            padding: 0;
-            display: flex;
-            flex-direction: column;
-            min-height: 100vh;
-        }
-
-        .container {
-            width: 90%;
-            max-width: 800px;
-            margin: auto;
-            text-align: center;
-            padding-top: 50px;
-            flex: 1;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-        }
-
-        textarea {
-            height: 200px;
-            padding: 10px;
-            margin-top: 10px;
-            background-color: #333;
-            color: #fff;
-            border: none;
-            resize: none;
-            font-size: 16px;
-        }
-
-        button {
-            background-color: #4CAF50;
-            color: white;
-            padding: 14px 20px;
-            margin: 8px 0;
-            border: none;
-            cursor: pointer;
-            width: 100%;
-            font-size: 16px;
-        }
-
-        button:hover {
-            opacity: 0.8;
-        }
-
-        .result {
-            margin-top: 20px;
-            padding: 20px;
-            background-color: #555;
-            color: #fff;
-        }
-
-        footer {
-            text-align: center;
-            margin-top: 20px;
-            color: #aaa;
-            background-color: #111;
-            padding: 10px 0;
-        }
-
-        footer a {
-            color: #aaa;
-            text-decoration: none;
-            margin: 0 10px;
-        }
-
-        footer a:hover {
-            color: #fff;
-        }
-
-        @media (max-width: 600px) {
-            .container {
-                width: 95%;
-            }
-        }
-    </style>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
@@ -98,28 +17,15 @@
 
     <footer>
         Desenvolvido por Miguel Xavier<br>
-        <a href="https://github.com/eumiguel01" target="_blank">
+        <a href="https://github.com/eumiguel01" rel="noopener" target="_blank" title="GitHub">
             <i class="fab fa-github"></i>
         </a>
-        <a href="https://www.instagram.com/eumiguel_dev/" target="_blank">
+        <a href="https://www.instagram.com/eumiguel_dev/" rel="noopener" target="_blank" title="Instagram">
             <i class="fab fa-instagram"></i>
         </a>
     </footer>
 
-    <script>
-        function compileCode() {
-            const code = document.getElementById('codeInput').value;
-
-            try {
-                eval(code);
-
-                document.getElementById('resultOutput').innerHTML = "Códdigo compilado com sucesso!";
-            } catch (error) {
-                document.getElementById('resultOutput').innerHTML = 'Erro ao compilar o código: ' + error.message;
-            }
-        }
-    </script>
-    
+    <script src="script.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/js/all.min.js"></script>
 </body>
 </html>
